[package]
name = "mls_pqc_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for PQC-enhanced MLS protocol operations"

[[bin]]
name = "mls_pqc_cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Engine dependency
mls_pqc_engine = { path = "../mls_pqc_engine" }
