[package]
name = "mls_pqc_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PQC-enhanced MLS protocol engine"

[dependencies]
# OpenMLS core
openmls = "0.7"
openmls_traits = "0.4"
openmls_rust_crypto = "0.4"
openmls_basic_credential = "0.4"
openmls_memory_storage = { version = "0.4", features = ["persistence"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
tls_codec = { version = "0.4", features = ["derive"] }

# Error handling
thiserror = "2.0"

# Encoding
base64 = "0.22"
serde_json = "1.0.149"

# PQC (Post-Quantum Cryptography)
ml-kem = "0.2"
rand = "0.8"

# Hybrid KEM (Classical + PQC)
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.15"
